--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,51 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Siasat">
+
+        <!-- Main Launcher Activity -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".auth.LoginActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Kaprodi Activities -->
+        <activity
+            android:name=".auth.KaprodiLoginActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"/>
+
+        <activity
+            android:name=".kaprodi.KaprodiMainActivity"
+            android:exported="false"
+            android:label="Kaprodi Dashboard"/>
+
+        <!-- Dosen Activities -->
+        <activity
+            android:name=".dosen.DosenMainActivity"
+            android:exported="false"
+            android:label="Dosen Dashboard"/>
+
+        <!-- Mahasiswa Activities -->
+        <activity
+            android:name=".mahasiswa.MahasiswaMainActivity"
+            android:exported="false"
+            android:label="Mahasiswa Dashboard"/>
+
+        <!-- Remove this if not needed -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+            <!-- Remove intent-filter if you're using LoginActivity as launcher -->
+        </activity>
+
     </application>
+
+    <!-- Internet permission for Firebase -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
