Add data model classes for academic system: Dosen, JadwalKuliah, Kaprodi, KartuStudi, Mahasiswa, MataKuliah, Nilai, Tagihan, and Transkrip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,14 @@
             android:exported="false"
             android:label="Lihat Transkrip" />
 
+        <activity android:name=".dosen.InputNilaiActivity"
+            android:exported="false"
+            android:label="Input Nilai" />
+
+        <activity android:name=".dosen.LihatMatkulActivity"
+            android:exported="false"
+            android:label="Input Nilai" />
+
 
         <!-- Remove this if not needed -->
         <activity
