Refactor Kaprodi features and UI
This commit introduces several changes related to Kaprodi (Head of Study Program) functionalities and user interface improvements.

Key changes:
- Removed `AddTranskripActivity` as it's no longer used.
- Renamed `AddMatakuliahActivity` to `TambahMatkulActivity` and updated its layout for better user experience, including a spinner to select Dosen.
- Added `LihatMatkulKaprodiActivity` to allow Kaprodi to view courses and student grades per lecturer.
- Updated `KaprodiMainActivity`:
    - Changed "Tambah Transkrip" button to "Lihat Mata Kuliah".
    - Displays Kaprodi's name and NIP.
    - Navigation to new `LihatMatkulKaprodiActivity`.
- Modified `Matakuliah.kt` model by removing the `jadwal` field.
- Enhanced `InputNilaiActivity` layout with consistent styling.
- Improved `LihatMatkulActivity` (for Dosen) to display more comprehensive course and student grade information.
- Updated `KstAdapter.kt` to remove the display of `jadwal`.
- Added new layout files: `activity_view_matkul_kaprodi.xml` and `item_matkul_kaprodi.xml`.
- Updated `AndroidManifest.xml` to include new activities and adjust labels.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,23 @@
             android:exported="false"
             android:label="Kaprodi Dashboard"/>
 
+        <activity android:name=".kaprodi.TambahMatkulActivity"
+            android:exported="false"
+            android:label="Tambah Mata Kuliah" />"
+
+        <activity android:name=".kaprodi.LihatMatkulKaprodiActivity"
+            android:exported="false"
+            android:label="Kaprodi Lihat Matkul" />"
+
         <!-- Dosen Activities -->
         <activity
             android:name=".dosen.DosenMainActivity"
             android:exported="false"
             android:label="Dosen Dashboard"/>
+        <activity android:name=".dosen.LihatMatkulActivity"
+            android:exported="false"
+            android:label="Input Nilai" />
 
-        <!-- Mahasiswa Activities -->
         <!-- Mahasiswa Activities -->
         <activity
             android:name=".mahasiswa.MahasiswaMainActivity"
@@ -65,11 +75,6 @@
         <activity android:name=".dosen.InputNilaiActivity"
             android:exported="false"
             android:label="Input Nilai" />
-
-        <activity android:name=".dosen.LihatMatkulActivity"
-            android:exported="false"
-            android:label="Input Nilai" />
-
 
         <!-- Remove this if not needed -->
         <activity
